src/wflow/snapshots/wflow__test__cancel_job_partition_log.snap
---
source: src/wflow/test.rs
expression: log_snapshot
---
- - 1
  - JobInit:
      job_id: test-cancel-job-1
      timestamp: "[timestamp]"
      args_json: "{\"key\":\"test-cancel-flag\"}"
      override_wflow_retry_policy: ~
      wflow:
        key: fails_until_told
        service:
          wasmcloud:
            workload_id: workload_123
- - 2
  - JobPartitionEffects:
      source_entry_id: 1
      effects:
        - job_id: test-cancel-job-1
          deets:
            RunJob:
              run_id: 0
- - 3
  - JobEffectResult:
      job_id: test-cancel-job-1
      timestamp: "[timestamp]"
      effect_id:
        entry_id: 2
        effect_idx: 0
      run_id: 0
      start_at: "[timestamp]"
      end_at: "[timestamp]"
      result:
        WflowErr:
          Transient:
            error_json: "{\"msg\":\"waiting for flag to be set\\n\\[location]\"}"
            retry_policy: ~
- - 4
  - JobCancel:
      job_id: test-cancel-job-1
      timestamp: "[timestamp]"
      reason: test requested cancel
- - 5
  - JobPartitionEffects:
      source_entry_id: 3
      effects:
        - job_id: test-cancel-job-1
          deets:
            RunJob:
              run_id: 1
- - 6
  - JobPartitionEffects:
      source_entry_id: 4
      effects:
        - job_id: test-cancel-job-1
          deets:
            AbortRun:
              reason: test requested cancel
- - 7
  - JobEffectResult:
      job_id: test-cancel-job-1
      timestamp: "[timestamp]"
      effect_id:
        entry_id: 5
        effect_idx: 0
      run_id: 1
      start_at: "[timestamp]"
      end_at: "[timestamp]"
      result:
        WflowErr:
          Transient:
            error_json: "{\"msg\":\"waiting for flag to be set\\n\\[location]\"}"
            retry_policy: ~
