src/wflow/snapshots/wflow__test__fails_once_sqlite_partition_log.snap
---
source: src/wflow/test.rs
assertion_line: 486
expression: log_snapshot
---
- - 1
  - JobInit:
      job_id: test-fails-once-sqlite-1
      timestamp: "[timestamp]"
      args_json: "{\"key\":\"test-counter\"}"
      override_wflow_retry_policy: ~
      wflow:
        key: fails_once
        service:
          wasmcloud:
            workload_id: workload_123
- - 2
  - JobPartitionEffects:
      source_entry_id: 1
      effects:
        - job_id: test-fails-once-sqlite-1
          deets:
            RunJob:
              run_id: 0
- - 3
  - JobEffectResult:
      job_id: test-fails-once-sqlite-1
      timestamp: "[timestamp]"
      effect_id:
        entry_id: 2
        effect_idx: 0
      run_id: 0
      worker_id: [tokio-fxw]
      start_at: "[timestamp]"
      end_at: "[timestamp]"
      result:
        WflowErr:
          Transient:
            error_json: "{\"msg\":\"first run, woohoo!\\n\\[location]\"}"
            retry_policy: ~
- - 4
  - JobPartitionEffects:
      source_entry_id: 3
      effects:
        - job_id: test-fails-once-sqlite-1
          deets:
            RunJob:
              run_id: 1
- - 5
  - JobEffectResult:
      job_id: test-fails-once-sqlite-1
      timestamp: "[timestamp]"
      effect_id:
        entry_id: 4
        effect_idx: 0
      run_id: 1
      worker_id: [tokio-fxw]
      start_at: "[timestamp]"
      end_at: "[timestamp]"
      result:
        StepEffect:
          step_id: 0
          attempt_id: 0
          start_at: "[timestamp]"
          end_at: "[timestamp]"
          deets:
            Success:
              value_json: "null"
- - 6
  - JobPartitionEffects:
      source_entry_id: 5
      effects:
        - job_id: test-fails-once-sqlite-1
          deets:
            RunJob:
              run_id: 2
              preferred_worker_id: [tokio-fxw]
- - 7
  - JobEffectResult:
      job_id: test-fails-once-sqlite-1
      timestamp: "[timestamp]"
      effect_id:
        entry_id: 6
        effect_idx: 0
      run_id: 2
      worker_id: [tokio-fxw]
      start_at: "[timestamp]"
      end_at: "[timestamp]"
      result:
        Success:
          value_json: "null"
