src/wflow/snapshots/wflow__test__pglite_select_one_partition_log.snap
---
source: src/wflow/test.rs
assertion_line: 429
expression: log_snapshot
---
- - 0
  - JobInit:
      job_id: test-pglite-select-one-1
      timestamp: "[timestamp]"
      args_json: "{}"
      override_wflow_retry_policy: ~
      wflow:
        key: pglite_select_one
        service:
          Wasmcloud:
            workload_id: workload_123
- - 1
  - JobPartitionEffects:
      source_entry_id: 0
      effects:
        - job_id: test-pglite-select-one-1
          deets:
            RunJob:
              run_id: 0
- - 2
  - JobEffectResult:
      job_id: test-pglite-select-one-1
      timestamp: "[timestamp]"
      effect_id:
        entry_id: 1
        effect_idx: 0
      run_id: 0
      start_at: "[timestamp]"
      end_at: "[timestamp]"
      result:
        StepEffect:
          step_id: 0
          attempt_id: 0
          start_at: "[timestamp]"
          end_at: "[timestamp]"
          deets:
            Success:
              value_json: "null"
- - 3
  - JobPartitionEffects:
      source_entry_id: 2
      effects:
        - job_id: test-pglite-select-one-1
          deets:
            RunJob:
              run_id: 1
- - 4
  - JobEffectResult:
      job_id: test-pglite-select-one-1
      timestamp: "[timestamp]"
      effect_id:
        entry_id: 3
        effect_idx: 0
      run_id: 1
      start_at: "[timestamp]"
      end_at: "[timestamp]"
      result:
        Success:
          value_json: "null"
